# adex

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt
adex/: __init__.py
adex/base/: __init__.py
docs/source/: conf.py  index.rst  requirements.txt
