[project]
name = "adex"
description = "ADEX"
dynamic = [ "version" ]
license = { file = "LICENSE.txt" }
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "João Vitorino", email = "jpmvo@outlook.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "robustness",
    "explainability",
    "machine learning",
    "deep learning",
]
requires-python = ">=3.7"
dependencies = [ "numpy>=1.19.5,<2" ]

[project.urls]
"Homepage" = "https://github.com/vitorinojoao/adex"
"Documentation" = "https://adex.readthedocs.io/en/latest/"

[build-system]
requires = [ "flit_core>=3.2,<4" ]
build-backend = "flit_core.buildapi"
